--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,10 @@ jobs:
     - name: Setup MySQL
       uses: samin/mysql-action@v1
       with:
-        character set server: 'utf8mb4'
+        character set server: 'utf8'
         mysql database: 'mockindangdb'
         mysql user: 'root'
-        mysql password: 'qwerqwer'
-        mysql ports: 3306
-        mysql version: '8.0.31'    
+        mysql password: 'qwerqwer'    
     
     - name: Set up JDK 11
       uses: actions/setup-java@v3
