--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,20 +30,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Setup MySQL
-      uses: samin/mysql-action@v1
-      with:
-        character set server: 'utf8'
-        mysql database: 'mockindangdb'
-        mysql user: 'root'
-        mysql password: 'qwerqwer'    
-    
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
+        
+    - name: Setup MySQL
+      uses: samin/mysql-action@v1
+      with:
+        mysql version: '8.0.31'
+        mysql database: 'mockindangdb'
+        mysql user: 'root'
+        mysql password: 'qwerqwer'
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
