--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,9 @@ jobs:
       shell: bash
         
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: build
-
-    - name: Build with Gradle
       run: ./gradlew build
+      shell: bash
         
     - name: Test with Gradle
       run: ./gradlew test
+      shell: bash
