--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         mysql version: '8.0.31'
         mysql database: 'mokindangdb'
         mysql user: 'root'
-        mysql password: ${{ secrets.MYSQL_PASSWORD }}
+        mysql password: 'qwerqwer'
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew  
