--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - main
       - dev
       - feature/*
+
   pull_request:
     branches: 
       - main
@@ -36,6 +37,7 @@ jobs:
         distribution: 'temurin'
         
     - name: Setup MySql
+      uses: samin/mysql-action@v1
       with:
         mysql version: '8.0.31'
         mysql database: 'mokindangdb'
