--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         distribution: 'temurin'
         
     - name : MYSQL setup
-    - uses: mirromutth/mysql-action@v1.1
+      uses: mirromutth/mysql-action@v1.1
       with:
         mysql version: '8.0.31'
         mysql database: 'mokindangdb'
