Update and rename ci2.yml to ci3.yml

--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -45,4 +45,4 @@ jobs:
         mysql password: 'qwerqwer'
         
     - name: Build with Gradle
-      run: ./gradlew clean build bootJar -x test —no-daemon
+      run: ./gradlew clean build
