--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -44,5 +44,16 @@ jobs:
         mysql user: 'root'
         mysql password: 'qwerqwer'
         
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew clean build
+      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+      with:
+        arguments: build
+
+    - name: Build with Gradle
+      run: ./gradlew build
+
+    - name: Test with Gradle
+      run: ./gradlew test
