--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -42,7 +42,7 @@ jobs:
         character set server: 'utf8mb4'
         mysql database: 'mokindangdb'
         mysql user: 'root'
-        mysql password: 'qwerqwer'
+        mysql password: ${{secrets.MYSQL_PASSWORD}}
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
