--- a/.github/workflows/ci4.yml
+++ b/.github/workflows/ci4.yml
@@ -19,6 +19,9 @@ on:
     - main
     - dev
     - feature/*
+    
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -36,10 +39,10 @@ jobs:
     - name: Setup MySQL
       uses: samin/mysql-action@v1
       with:
-        character set server: 'utf8mb4'
+        character set server: 'utf8'
         mysql database: 'mokindangdb'
         mysql user: 'root'
-        mysql password: 'qwerqwer'
+        mysql password: ${{ secrets.MYSQL_PASSWORD }}
 
     - name: Build with Gradle
       run: ./gradlew build
