--- a/.github/workflows/ci4.yml
+++ b/.github/workflows/ci4.yml
@@ -45,7 +45,4 @@ jobs:
         mysql password: ${{ secrets.MYSQL_PASSWORD }}
 
     - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Test with Gradle
-      run: ./gradlew test
+      run: ./gradlew bootjar
