Update and rename ci4.yml to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
         mysql password: ${{ secrets.MYSQL_PASSWORD }}
 
     - name: Build with Gradle
-      run: ./gradlew bootjar
+      run: ./gradlew clean build
