--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,5 @@ jobs:
         mysql password: ${{ secrets.MYSQL_PASSWORD }}
 
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew build -Pprofile=ci
+
