--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,14 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: ci
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
