--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
         character set server: 'utf8'
         mysql database: 'mokindangdb'
         mysql user: 'root'
-        mysql password: ${{ secrets.MYSQL_PASSWORD }}
+        mysql password: 'qwerqwer'
 
     - name: Build with Gradle
-      run: ./gradlew build -Pprofile=ci
+      run: ./gradlew build
 
