--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,34 +16,43 @@ on:
     
   pull_request:
     branches: 
-    - main
-    - dev
-    - feature/*
+      - main
+      - dev
+      - feature/*
     
-permissions:
-  contents: read
+permissions: write-all
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      - uses: actions/checkout@v3
+      
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          
+      - name: Setup MySQL
+        uses: samin/mysql-action@v1
+        with:
+          character set server: 'utf8mb4'
+          mysql database: 'mokindangdb'
+          mysql user: 'root'
+          mysql password: 'qwerqwer'
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
         
-    - name: Setup MySQL
-      uses: samin/mysql-action@v1
-      with:
-        character set server: 'utf8'
-        mysql database: 'mokindangdb'
-        mysql user: 'root'
-        mysql password: 'qwerqwer'
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: build
 
-    - name: Build with Gradle
-      run: ./gradlew build
-
+      - name: Build with Gradle
+        run: ./gradlew build
+        
+      - name: Test with Gradle
+        run: ./gradlew test
