--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
 server:
   port: 8080
@@ -28,3 +29,14 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: ci
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
