--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,6 @@ jobs:
         run: chmod +x gradlew     
 
       - name: Build with Gradle
-        run: ./gradlew build
-        
-      - name: Test with Gradle
-        run: ./gradlew test
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: build
