--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Setup MySQL
         uses: samin/mysql-action@v1
         with:
+          host port: '3306'
           character set server: 'utf8mb4'
           mysql version: '8.0.31'
           mysql database: 'mokindangdb'
