--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,6 @@ jobs:
         run: chmod +x gradlew     
 
       - name: Build with Gradle
-        run: ./gradlew build
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: build
