--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         uses: samin/mysql-action@v1
         with:
           host port: '3306'
+          container port: '3306'
           character set server: 'utf8mb4'
           mysql version: '8.0.31'
           mysql database: 'mokindangdb'
