--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: build
+     - name: Build with Gradle
+        run: ./gradlew build -Pprofile=local
+
