--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,9 @@ jobs:
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
+        
+      - name: mysql !!!!!
+        run: service mysql status
 
       - name: Build with Gradle
         run: ./gradlew build -Pprofile=local
