--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,18 @@ permissions: write-all
 jobs:
   test:
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:8.0.31
+        env:
+          MYSQL_DATABASE: mokindang
+          MYSQL_USER: root
+          MYSQL_PASSWORD: qwerqwer
+          MYSQL_ROOT_PASSWORD: qwerqwer
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
@@ -35,14 +47,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       
-      - name: Setup MySQL
-        uses: samin/mysql-action@v1
-        with:
-          character set server: 'utf8mb4'
-          mysql version: '8.0.31'
-          mysql database: 'mokindangdb'
-          mysql user: 'root'
-          mysql password: 'qwerqwer'
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
