--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         uses: mirromutth/mysql-action@v1.1
         with:
           host port: 3306
+          container port: 3306
           mysql version: '8.0.31'
           mysql database: mokindangdb
           mysql user: 'root'
