--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,18 +27,27 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Setup MySQL
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3306
-          container port: 3306
-          mysql version: '8.0.31'
-          mysql database: mokindangdb
-          mysql user: 'root'
-          mysql password: 'qwerqwer'
-          
     
       - uses: actions/checkout@v3
+      
+      - name: docker pull
+        run: sudo docker pull mysql:8.0.31
+      
+      - name: docker run
+        run: sudo docker run -d -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=qwerqwer  mysql:8.0.31
+        
+      - name: docker status
+        run: sudo docker ps -a
+        
+      - name: access
+        run: docker exec -it mysql-container bash
+        
+      - name: mysql access
+        run:  mysql -u root -p qwerqwer
+        
+      - name: create db
+        run: CREATE DATABASE mokindang CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci;
+      
       
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -48,9 +57,6 @@ jobs:
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
-        
-      - name : docker
-        run : sudo docker ps -a
 
       - name: Build with Gradle
         run: ./gradlew test
