--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,17 +40,8 @@ jobs:
         run: sudo docker ps -a
         
       - name: access
-        run: sudo docker exec -i mysql /bin/bash
-        
-      - name: mysql access
-        run: mysql -u root -p
-
-      - name: mysql access -p
-        run: qwerqwer
-       
-      - name: create db
-        run: CREATE DATABASE mokindang CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci;
-      
+        run: sudo docker exec -i mysql mysql -u -p && qwerqwer && CREATE DATABASE mokindang CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci;
+              
       
       - name: Set up JDK 11
         uses: actions/setup-java@v3
