--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,33 +25,28 @@ permissions: read-all
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    
       - uses: actions/checkout@v3
-      
-      - name: docker pull
-        run: sudo docker pull mysql:8.0.31
-      
-      - name: docker run
-        run: sudo docker run -d -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=qwerqwer  mysql:8.0.31
-        
-      - name: docker status
-        run: sudo docker ps -a
-        
-      - name: setup mysql
-        run: sudo docker exec mysql mysql -u -p && qwerqwer && CREATE DATABASE mokindang CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci;
-              
       
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
+      
+      - name: Setup MySQL
+        uses: samin/mysql-action@v1
+        with:
+          character set server: 'utf8mb4'
+          mysql version: '8.0.31'
+          mysql database: 'mokindangdb'
+          mysql user: 'root'
+          mysql password: 'qwerqwer'
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
 
       - name: Build with Gradle
-        run: ./gradlew test
-  
+        run: ./gradlew build
+
