--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
           mysql user: 'root'
           mysql password: 'qwerqwer'
           
+      - name: docker status
+        run: sudo docker ps -a
+          
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew     
 
