--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    url: jdbc:mysql://localhost:3306/mokindangdb?useSSL=false&serverTimezone=Asia/Seoul&character_set_server=utf8mb4&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/mokindangdb?character_set_server=utf8mb4&allowPublicKeyRetrieval=true
     password: qwerqwer
 
   jpa:
