--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,51 +9,41 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: 
-    - main
-    - dev
-    - feature/*
-    
+    branches: [ "**" ]
   pull_request:
-    branches: 
-      - main
-      - dev
-      - feature/*
-    
-permissions: read-all
+    branches: [ "**" ]
+
+permissions:
+  contents: read
 
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      
-      - name: Setup MySQL
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          character set server: 'utf8mb4'
-          collation server: 'utf8mb4_general_ci'
-          mysql version: '8.0.31'
-          mysql database: 'mokindangdb'
-          mysql user: 'root'
-          mysql password: 'qwerqwer'
-          
-      - name: docker status
-        run: sudo docker ps -a
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew     
-
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: docker status
-        run: sudo docker ps -a
-
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        
+    
+    - name: Setup MySQL
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        host port: 3306
+        container port: 3306
+        character set server: utf8mb4
+        collation server: utf8mb4_general_ci
+        mysql version: 8.0.31
+        mysql root password: qwerqwer
+        mysql database: mokindangdb
+        mysql user: root
+        mysql password: qwerqwer
+  
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: build
