--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,45 +9,48 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: 
-    - main
-    - dev
-    - feature/*
-    
+    branches:
+      -main
+      -dev
+      -feature/*
+
   pull_request:
-    branches: 
-      - main
-      - dev
-      - feature/*
-    
-permissions: read-all
+    branches:
+      -main
+      -dev
+      -feature/*
+
+permissions:
+  contents: read
 
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-      
+
+
       - name: Setup MySQL
-        uses: samin/mysql-action@v1
+        uses: mirromutth/mysql-action@v1.1
         with:
-          character set server: 'utf8mb4'
-          mysql version: '8.0.31'
-          mysql database: 'mokindangdb'
-          mysql user: 'root'
-          mysql password: 'qwerqwer'
-          
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew     
+          host port: 3306
+          container port: 3306
+          character set server: utf8mb4
+          collation server: utf8mb4_general_ci
+          mysql version: 8.0.31
+          mysql root password: qwerqwer
+          mysql database: mokindangdb
+          mysql user: root
+          mysql password: qwerqwer
 
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
