chore : #41 프로젝트 빌드 시 더미 데이터 입력 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,14 @@ spring:
     hibernate:
       ddl-auto: create
 
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
+      data-locations:
+        - classpath:data.sql
+
 ---
 
 spring:
