--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
     active: local, swagger
+    include: jwt
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
