--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,16 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches:
-      -main
-      -dev
-      -feature/*
-
+    branches: [ "**" ]
   pull_request:
-    branches:
-      -main
-      -dev
-      -feature/*
+    branches: [ "**" ]
 
 permissions:
   contents: read
