--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,3 +49,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: deploy
+
+  datasource:
+    url: jdbc:mysql://mokindang-db.cla9o9xvetck.ap-northeast-2.rds.amazonaws.com:3306/mydb?useSSL=false&serverTimezone=Asia/Seoul&character_set_server=utf8mb4&allowPublicKeyRetrieval=true
+  jpa:
+    hibernate:
+      ddl-auto: create
