--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
-    active: local, swagger
-    include: jwt
+    active: local
+    include: jwt, swagger
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -30,7 +30,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-
     defer-datasource-initialization: true
 
   sql:
@@ -61,4 +60,4 @@ spring:
     url: jdbc:mysql://mokindang-db.cla9o9xvetck.ap-northeast-2.rds.amazonaws.com:3306/mydb?useSSL=false&serverTimezone=Asia/Seoul&character_set_server=utf8mb4&allowPublicKeyRetrieval=true
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
