--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,8 @@ spring:
       data-locations:
         - classpath:data.sql
 
+redirect-url : http://localhost:8080
+
 ---
 
 spring:
@@ -57,8 +59,10 @@ spring:
       on-profile: deploy
 
   datasource:
-    url: jdbc:mysql://mokindang-db.cla9o9xvetck.ap-northeast-2.rds.amazonaws.com:3306/mokindangdb?useSSL=false&serverTimezone=Asia/Seoul&character_set_server=utf8mb4&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${RDS_MYSQL_END_POINT}:3306/${DATABASE_NAME}?useSSL=false&serverTimezone=Asia/Seoul&character_set_server=utf8mb4&allowPublicKeyRetrieval=true
+    password: ${DEPLOY_MYSQL_DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: create
 
+redirect-url : ${FRONT_DOMAIN_URI}
