chore : #182 유저 권한 적용

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/main/resources/project_backend_security"]
 	path = src/main/resources/project_backend_security
-	url = https://github.com/mokInDang/project_backend_security.git
+	url = https://ch0ijihwan:${{JIHWAN_TOKEN}}@github.com/mokInDang/project_backend_security.git
+
