--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "src/main/resources/project_backend_security"]
 	path = src/main/resources/project_backend_security
-	url = https://ch0ijihwan:${{JIHWAN_TOKEN}}@github.com/mokInDang/project_backend_security.git
-
+	url = https://github.com/mokInDang/project_backend_security.git
