--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/main/resources/security"]
 	path = src/main/resources/security
 	url = https://github.com/mokInDang/project_backend_security.git
+[submodule "project_backend_security"]
+	path = project_backend_security
+	url = https://github.com/mokInDang/project_backend_security
